--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <button class="change-grid-size">Change size</button>
+    <div class="options">
+      <button class="change-grid-size">Change Grid Size</button>
+      <button class="toggle-random-color">Random Color</button>
+      <button class="reset-grid">Reset Grid</button>
+    </div>
     <div class="container"></div>
     <script src="script.js"></script>
   </body>
